--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-opencv-python~=4.9.0.80
-streamlit~=1.32.2
-numpy~=1.26.4
-fer~=22.5.1
-onnx~=1.15.0
+opencv-python
+streamlit
+numpy
+audio-recorder-streamlit
+pydub
+pillow
+
