--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-opencv-python
+opencv-python~=4.10.0.84
 opencv-contrib-python
-streamlit
-librosa
-numpy
+streamlit~=1.37.1
+librosa~=0.10.2.post1
+numpy~=1.26.4
 audio-recorder-streamlit
-pydub
-pillow
-tensorflow
+pydub~=0.25.1
+pillow~=10.4.0
+tensorflow~=2.17.0
+plotly~=5.23.0
